--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,5 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button (click)="onGoToUsers()">Users</button>
+  <button ion-button [navPush]="userPage">Users</button>
+  <button ion-button [navPush]="shopPage">Shop</button>
 </ion-content>
