--- a/src/pages/quote/quote.html
+++ b/src/pages/quote/quote.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the BuyoutPage page.
+  Generated template for the QuotePage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Buyout: {{item}}</ion-title>
+    <ion-title>quote</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <button ion-button (click)="onBuy()">Buy</button>
+
 </ion-content>
