--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -1,6 +1,11 @@
 <ion-header>
 
   <ion-navbar>
+    <ion-buttons start left>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>Favorite Quotes</ion-title>
   </ion-navbar>
 
@@ -9,9 +14,17 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let quote of quotes">
-      <h2>{{quote.person}}</h2>
-      <p>{{quote.text}}</p>
-    </ion-item>
+    <ion-item-sliding *ngFor="let quote of quotes">
+      <ion-item [color]="isAltBackground() ? 'altQuoteBackground':'quoteBackground'" (click)="onViewQuote(quote)">
+        <h2>{{quote.person}}</h2>
+        <p>{{quote.text}}</p>
+      </ion-item>
+      <ion-item-options>
+        <button ion-button color="danger" (click)="onRemoveFavorite(quote)">
+          <ion-icon name="trash"></ion-icon>
+          Delete
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
