--- a/src/pages/quote/quote.html
+++ b/src/pages/quote/quote.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title></ion-title>
+    <ion-title>{{quote?.person}}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -10,12 +10,13 @@
 <ion-content padding text-center>
   <ion-card>
     <ion-card-content>
+      {{quote?.text}}
       <ion-row>
         <ion-col>
-            <button ion-button small outline color="danger">Unfavorite</button>
+            <button ion-button small outline color="danger" (click)="onClose(true)">Unfavorite</button>
         </ion-col>
       </ion-row>
     </ion-card-content>
   </ion-card>
-  <button ion-button color="danger">Close</button>
+  <button ion-button color="danger" (click)="onClose()">Close</button>
 </ion-content>
