--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,21 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <button ion-button color="secondary" (click)="onClick()">A normal button</button>
+  <button ion-button outline (click)="onClick()">A normal button</button>
+  <button ion-button clear (click)="onClick()">A normal button</button>
+  <button ion-button round block (click)="onClick()">A normal button</button>
+  <button ion-button full (click)="onClick()">A normal button</button>
+  <button ion-button small (click)="onClick()">A normal button</button>
+  <button ion-button large (click)="onClick()">A normal button</button>
+  <button ion-button icon-left (click)="onClick()"><ion-icon name="home"></ion-icon>Home</button>
+
+  <ion-list>
+    <ion-item>
+      <ion-icon name="star" item-left></ion-icon>
+      <h1>Hello</h1>
+      <p>A normal item</p>
+    </ion-item>
+    <button ion-item item-right>A button item</button>
+  </ion-list>
 </ion-content>
